@@ -862,6 +862,9 @@ INFIX_FILTER_NAME=Fichiers Infix
 # Flash filter
 FLASH_FILTER_NAME=Export XML Flash
 
+# TXML filter
+TXML_FILTER_NAME=Fichier TXML Wordfast
+
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Erreur dans le fichier {0} \u00e0 la ligne {1}
 
